# flip3d

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: Capture.cpp  Capture.h  Config.cpp  Config.h  DwmThumbApi.h  Flip3DApp.cpp  Flip3DApp.h  Flip3DCore.cpp  Flip3DCore.h  Flip3DRenderer.cpp  Flip3DRenderer.h  Flip3DWindow.cpp  Flip3DWindow.h  Flip3Dmain.cpp  MicaPeek.cpp  MicaPeek.h  Shaders.h  ShellOverlayContext.cpp  ShellOverlayContext.h  UndocumentedDwmApi.cpp  UndocumentedDwmApi.h  WindowCapture.cpp  WindowCapture.h  flip3d.cpp  flip3d.h  flip3d_dllmain.cpp  main.cpp  resources.rc  winmain.cpp
